Fix 500px logo vertical alignment

--- a/src/components/Contact/Contact.less
+++ b/src/components/Contact/Contact.less
@@ -25,7 +25,7 @@
 
   // 500px logo
   .icon-500px {
-    margin-top: -0.1em;
+    margin-top: -0.055em;
     display: block;
 
     &:before {
